Revision history for Perl module CPAN::Mini::Webserver:

0.39
     - make a single key from the license text and the license url
       from resources instead of displaying both seperately (patch
       by martijn)
     - sort dependencies
     - narrow down the search results based on educated guesses based
       on the search query (patch by martijn)

0.38 Mon Aug 18 09:15:25 BST 2008
     - fix bug which repeated metadata (spotted by claes)
     - remove unnecessary "use Term::ProgressBar::Quiet;"

0.37 Fri Aug 15 09:37:46 CEST 2008
     - show metadata on distribution pages (patch by martijn)
     - port can now be configured with --port command line option 
       (thanks to tokuhirom, miyagawa, martijn)
     - does Bonjour publishing if HTTP::Server::Simple::Bonjour is
       installed (miyagawa)
     - added /download links to individual files and tarballs
       (thanks to miyagawa)
     - highlight perl files in lib, t and hide files in inc
       (thanks to tokuhirom)

0.36 Thu Aug 14 16:20:53 CEST 2008
     - improve searching, you can now search for "buffy -test"
     - make links to modules in the pod and source point back
       to minicpan_webserver instead of to search.cpan.org
       (patch by martijn)
     - make code highlighting darker
     - change the port to 2963 (thanks to clkao)
     - syntax highlight *.t files (thanks to mfowler)

0.35 Tue Aug 12 07:30:28 BST 2008
     - remove failing pod.t test due to bugs in Pod::Simple
       (spotted by rsavage)
     - handle *.tgz as well as *.tar.gz (patch by rsavage)

0.34 Fri Aug  8 18:00:32 BST 2008
     - mention the subversion repository and the mailing list
     - require Template::Declare 0.29 (spotted by evdb)
     - require HTTP::Server::Simple 0.34 (spotted by ranguard)
     - added favicon
     - hide POD errors
     - add an opensearch plugin (such as Firefox's search bar)
     - skip tests unless there is an existing mirror